feat: migrate bff infra path and snake case
